# BLE

./: .gitignore  .mxproject  BLE_v1.ioc  BLE_v2.ioc  CMakeLists.txt  Makefile  STM32WBA52xx_FLASH.ld  STM32WBA52xx_RAM.ld  stm32wba52.cfg
AZURE_RTOS/App/: app_azure_rtos.c  app_azure_rtos.h  app_azure_rtos_config.h
Core/Inc/: app_conf.h  app_entry.h  app_threadx.h  main.h  stm32_rtos.h  stm32_u8g2.h  stm32wbaxx_hal_conf.h  stm32wbaxx_it.h  stm32wbaxx_nucleo_conf.h  tx_user.h
Core/Src/: app_entry.c  app_threadx.c  main.c  stm32_u8g2.c  stm32wbaxx_hal_msp.c  stm32wbaxx_hal_timebase_tim.c  stm32wbaxx_it.c  tx_initialize_low_level.S
Drivers/CMSIS/Device/ST/STM32WBAxx/Include/: stm32wba52xx.h  stm32wbaxx.h
Drivers/STM32WBAxx_HAL_Driver/Inc/: stm32wbaxx_hal.h  stm32wbaxx_hal_cortex.h  stm32wbaxx_hal_def.h  stm32wbaxx_hal_dma.h  stm32wbaxx_hal_dma_ex.h  stm32wbaxx_hal_flash_ex.h  stm32wbaxx_hal_i2c.h  stm32wbaxx_hal_rcc.h  stm32wbaxx_hal_rcc_ex.h  stm32wbaxx_hal_rng_ex.h  stm32wbaxx_hal_rtc.h  stm32wbaxx_hal_rtc_ex.h  stm32wbaxx_hal_tim.h  stm32wbaxx_ll_cortex.h  stm32wbaxx_ll_dma.h  stm32wbaxx_ll_rcc.h
Drivers/STM32WBAxx_HAL_Driver/Src/: stm32wbaxx_hal.c  stm32wbaxx_hal_cortex.c  stm32wbaxx_hal_dma.c  stm32wbaxx_hal_dma_ex.c  stm32wbaxx_hal_i2c.c  stm32wbaxx_hal_pwr.c  stm32wbaxx_hal_rcc_ex.c  stm32wbaxx_hal_rng_ex.c  stm32wbaxx_hal_rtc.c  stm32wbaxx_hal_tim.c  stm32wbaxx_hal_uart.c
Drivers/u8g2/: mui.c  mui.h  mui_u8g2.c  mui_u8g2.h  u8g2.h  u8g2_d_memory.c  u8g2_d_setup.c  u8g2_font.c  u8x8.h  u8x8_cad.c  u8x8_u8toa.c
Middlewares/ST/STM32_WPAN/ble/stack/include/: ble_bufsize.h  ble_codec.h  ble_legacy.h  ble_std.h  bleplat.h  blestack.h
Middlewares/ST/STM32_WPAN/ble/stack/include/auto/: ble_events.h  ble_gap_aci.h  ble_gatt_aci.h  ble_hal_aci.h  ble_hci_le.h  ble_l2cap_aci.h  ble_types.h  ble_vs_codes.h
Middlewares/ST/STM32_WPAN/link_layer/ll_cmd_lib/config/ble_full/: ll_fw_config.h
Middlewares/ST/STM32_WPAN/link_layer/ll_cmd_lib/inc/: bsp.h  common_types.h  event_manager.h  evnt_schdlr_gnrc_if.h  hci.h  ll_error.h  ll_intf.h  mem_intf.h  os_wrapper.h  power_table.h
Middlewares/ST/STM32_WPAN/link_layer/ll_cmd_lib/inc/_40nm_reg_files/: DWC_ble154combo.h
Middlewares/ST/STM32_WPAN/link_layer/ll_sys/inc/: linklayer_plat.h  ll_sys.h
Middlewares/ST/STM32_WPAN/link_layer/ll_sys/src/: ll_sys_dp_slp.c  ll_sys_intf.c  ll_sys_startup.c
Middlewares/ST/threadx/ports/cortex_m33/gnu/inc/: tx_port.h
Middlewares/ST/threadx/ports/cortex_m33/gnu/src/: tx_initialize_low_level.S  tx_thread_context_restore.S  tx_thread_context_save.S  tx_thread_interrupt_control.S  tx_thread_interrupt_disable.S  tx_thread_interrupt_restore.S  tx_thread_schedule.S  tx_thread_secure_stack_allocate.S  tx_thread_secure_stack_free.S  tx_thread_secure_stack_initialize.S  tx_thread_stack_build.S  tx_thread_system_return.S  tx_timer_interrupt.S
STM32CubeIDE/: .cproject  .project
STM32_WPAN/App/: app_ble.c  app_ble.h  ble_conf.h  dis.c  dis.h  dis_app.c  dis_app.h  hrs.c  hrs.h  hrs_app.c  hrs_app.h
System/Config/Debug_GPIO/: app_debug.c  app_debug.h  debug_config.h
System/Config/Flash/: simple_nvm_arbiter_conf.h
System/Config/Log/: log_module.c  log_module.h
System/Config/LowPower/: app_sys.h  peripheral_init.c  user_low_power_config.c
System/Interfaces/: hw.h  hw_aes.c  hw_if.h  hw_rng.c  stm32_lpm_if.c  timer_if.c  usart_if.c
System/Modules/: adc_ctrl.c  adc_ctrl.h  app_sys.c  ble_timer.c  ble_timer.h  otp.c  scm.c  scm.h  temp_measurement.c
System/Modules/Flash/: flash_manager.c  rf_timing_synchro.c  rf_timing_synchro.h  simple_nvm_arbiter.c  simple_nvm_arbiter_common.h
System/Modules/MemoryManager/: advanced_memory_manager.c  advanced_memory_manager.h
System/Modules/RFControl/: rf_antenna_switch.c  rf_antenna_switch.h
System/Modules/RTDebug/: RTDebug.c  RTDebug.h  RTDebug_dtb.c  RTDebug_dtb.h  debug_signals.h  local_debug_tables.h
System/Modules/SerialCmdInterpreter/: serial_cmd_interpreter.c
System/Modules/baes/: baes.h
System/Startup/: stm32wbaxx_ResetHandler_GCC.s
cmake/: gcc-arm-none-eabi.cmake
cmake/stm32cubemx/: CMakeLists.txt
