cmake_minimum_required(VERSION 3.22)

project(stm32cubemx)
add_library(stm32cubemx INTERFACE)

# Enable CMake support for ASM and C languages
enable_language(C ASM)

target_compile_definitions(stm32cubemx INTERFACE
	USE_FULL_LL_DRIVER
	BLE
	TX_SINGLE_MODE_NON_SECURE=1
	USE_NUCLEO_64
	USE_HAL_DRIVER
	STM32WBA52xx
    $<$<CONFIG:Debug>:DEBUG>
)

target_include_directories(stm32cubemx INTERFACE
    ../../Core/Inc
    ../../System/Interfaces
    ../../System/Modules
    ../../System/Modules/baes
    ../../System/Modules/Flash
    ../../System/Modules/MemoryManager
    ../../System/Modules/Nvm
    ../../System/Modules/RTDebug
    ../../System/Modules/RFControl
    ../../System/Modules/SerialCmdInterpreter
    ../../System/Config/Log
    ../../System/Config/LowPower
    ../../System/Config/Debug_GPIO
    ../../System/Config/Flash
    ../../System/Config/ADC_Ctrl
    ../../System/Config/CRC_Ctrl
    ../../STM32_WPAN/App
    ../../STM32_WPAN/Target
    ../../AZURE_RTOS/App
    ../../Drivers/STM32WBAxx_HAL_Driver/Inc
    ../../Drivers/STM32WBAxx_HAL_Driver/Inc/Legacy
    ../../Utilities/trace/adv_trace
    ../../Utilities/misc
    ../../Utilities/tim_serv
    ../../Utilities/lpm/tiny_lpm
    ../../Middlewares/ST/STM32_WPAN
    ../../Middlewares/ST/STM32_WPAN/link_layer/ll_cmd_lib/config/ble_full
    ../../Middlewares/ST/STM32_WPAN/ble/svc/Src
    ../../Middlewares/ST/threadx/common/inc
    ../../Drivers/BSP/STM32WBAxx_Nucleo
    ../../Drivers/CMSIS/Device/ST/STM32WBAxx/Include
    ../../Middlewares/ST/STM32_WPAN/link_layer/ll_cmd_lib/inc
    ../../Middlewares/ST/STM32_WPAN/link_layer/ll_cmd_lib/inc/_40nm_reg_files
    ../../Middlewares/ST/STM32_WPAN/link_layer/ll_cmd_lib/inc/ot_inc
    ../../Middlewares/ST/STM32_WPAN/link_layer/ll_sys/inc
    ../../Middlewares/ST/STM32_WPAN/ble
    ../../Middlewares/ST/STM32_WPAN/ble/stack/include
    ../../Middlewares/ST/STM32_WPAN/ble/stack/include/auto
    ../../Middlewares/ST/STM32_WPAN/ble/svc/Inc
    ../../Middlewares/ST/threadx/ports/cortex_m33/gnu/inc
    ../../Middlewares/ST/threadx/utility/low_power
    ../../Drivers/CMSIS/Include
)

target_sources(stm32cubemx INTERFACE
	../../Core/Src/main.c
	../../Core/Src/stm32wbaxx_it.c
	../../Core/Src/stm32wbaxx_hal_msp.c
	../../Drivers/STM32WBAxx_HAL_Driver/Src/stm32wbaxx_hal_cortex.c
	../../Drivers/STM32WBAxx_HAL_Driver/Src/stm32wbaxx_hal.c
	../../Drivers/STM32WBAxx_HAL_Driver/Src/stm32wbaxx_hal_i2c.c
	../../Drivers/STM32WBAxx_HAL_Driver/Src/stm32wbaxx_hal_i2c_ex.c
	../../Drivers/STM32WBAxx_HAL_Driver/Src/stm32wbaxx_hal_rcc.c
	../../Drivers/STM32WBAxx_HAL_Driver/Src/stm32wbaxx_hal_rcc_ex.c
	../../Drivers/STM32WBAxx_HAL_Driver/Src/stm32wbaxx_hal_flash.c
	../../Drivers/STM32WBAxx_HAL_Driver/Src/stm32wbaxx_hal_flash_ex.c
	../../Drivers/STM32WBAxx_HAL_Driver/Src/stm32wbaxx_hal_gpio.c
	../../Drivers/STM32WBAxx_HAL_Driver/Src/stm32wbaxx_hal_dma.c
	../../Drivers/STM32WBAxx_HAL_Driver/Src/stm32wbaxx_hal_dma_ex.c
	../../Drivers/STM32WBAxx_HAL_Driver/Src/stm32wbaxx_hal_exti.c
	../../Drivers/STM32WBAxx_HAL_Driver/Src/stm32wbaxx_hal_pwr.c
	../../Drivers/STM32WBAxx_HAL_Driver/Src/stm32wbaxx_hal_pwr_ex.c
	../../Drivers/STM32WBAxx_HAL_Driver/Src/stm32wbaxx_hal_gtzc.c
	../../Drivers/STM32WBAxx_HAL_Driver/Src/stm32wbaxx_hal_icache.c
	../../Drivers/STM32WBAxx_HAL_Driver/Src/stm32wbaxx_hal_hsem.c
	../../Drivers/STM32WBAxx_HAL_Driver/Src/stm32wbaxx_hal_uart.c
	../../Drivers/STM32WBAxx_HAL_Driver/Src/stm32wbaxx_hal_uart_ex.c
	../../Core/Src/system_stm32wbaxx.c
	../../Core/Src/app_entry.c
	../../Core/Src/app_threadx.c
	../../Core/Src/stm32wbaxx_hal_timebase_tim.c
	../../System/Modules/adc_ctrl.c
	../../System/Modules/app_sys.c
	../../System/Modules/ble_timer.c
	../../System/Modules/otp.c
	../../System/Modules/scm.c
	../../System/Modules/stm_list.c
	../../System/Modules/baes/baes_cmac.c
	../../System/Modules/baes/baes_ecb.c
	../../System/Modules/MemoryManager/advanced_memory_manager.c
	../../System/Modules/MemoryManager/stm32_mm.c
	../../System/Modules/Nvm/nvm_emul.c
	../../System/Modules/RTDebug/RTDebug.c
	../../System/Modules/RTDebug/RTDebug_dtb.c
	../../System/Modules/RFControl/rf_antenna_switch.c
	../../System/Modules/Flash/flash_driver.c
	../../System/Modules/Flash/flash_manager.c
	../../System/Modules/Flash/rf_timing_synchro.c
	../../System/Modules/Flash/simple_nvm_arbiter.c
	../../System/Interfaces/hw_aes.c
	../../System/Interfaces/hw_otp.c
	../../System/Interfaces/hw_pka.c
	../../System/Interfaces/hw_rng.c
	../../System/Interfaces/pka_p256.c
	../../System/Interfaces/stm32_lpm_if.c
	../../System/Interfaces/timer_if.c
	../../System/Interfaces/usart_if.c
	../../System/Config/LowPower/user_low_power_config.c
	../../System/Config/Debug_GPIO/app_debug.c
	../../STM32_WPAN/App/app_ble.c
	../../STM32_WPAN/App/hrs.c
	../../STM32_WPAN/App/hrs_app.c
	../../STM32_WPAN/App/dis.c
	../../STM32_WPAN/App/dis_app.c
	../../STM32_WPAN/Target/bleplat.c
	../../STM32_WPAN/Target/power_table.c
	../../STM32_WPAN/Target/linklayer_plat.c
	../../STM32_WPAN/Target/bpka.c
	../../STM32_WPAN/Target/ll_sys_if.c
	../../STM32_WPAN/Target/host_stack_if.c
	../../AZURE_RTOS/App/app_azure_rtos.c
	../../Drivers/STM32WBAxx_HAL_Driver/Src/stm32wbaxx_hal_tim.c
	../../Drivers/STM32WBAxx_HAL_Driver/Src/stm32wbaxx_hal_tim_ex.c
	../../Drivers/STM32WBAxx_HAL_Driver/Src/stm32wbaxx_hal_adc.c
	../../Drivers/STM32WBAxx_HAL_Driver/Src/stm32wbaxx_hal_adc_ex.c
	../../Drivers/STM32WBAxx_HAL_Driver/Src/stm32wbaxx_hal_crc.c
	../../Drivers/STM32WBAxx_HAL_Driver/Src/stm32wbaxx_hal_crc_ex.c
	../../Drivers/STM32WBAxx_HAL_Driver/Src/stm32wbaxx_hal_ramcfg.c
	../../Drivers/STM32WBAxx_HAL_Driver/Src/stm32wbaxx_hal_rng.c
	../../Drivers/STM32WBAxx_HAL_Driver/Src/stm32wbaxx_hal_rng_ex.c
	../../Drivers/STM32WBAxx_HAL_Driver/Src/stm32wbaxx_hal_rtc.c
	../../Drivers/STM32WBAxx_HAL_Driver/Src/stm32wbaxx_hal_rtc_ex.c
	../../Middlewares/ST/STM32_WPAN/ble/svc/Src/svc_ctl.c
	../../Middlewares/ST/STM32_WPAN/link_layer/ll_sys/src/ll_sys_cs.c
	../../Middlewares/ST/STM32_WPAN/link_layer/ll_sys/src/ll_sys_dp_slp.c
	../../Middlewares/ST/STM32_WPAN/link_layer/ll_sys/src/ll_sys_intf.c
	../../Middlewares/ST/STM32_WPAN/link_layer/ll_sys/src/ll_sys_startup.c
	../../Middlewares/ST/threadx/common/src/tx_initialize_high_level.c
	../../Middlewares/ST/threadx/common/src/tx_initialize_kernel_enter.c
	../../Middlewares/ST/threadx/common/src/tx_initialize_kernel_setup.c
	../../Middlewares/ST/threadx/common/src/tx_thread_stack_error_handler.c
	../../Middlewares/ST/threadx/common/src/tx_thread_stack_error_notify.c
	../../Middlewares/ST/threadx/common/src/tx_thread_system_resume.c
	../../Middlewares/ST/threadx/common/src/tx_block_allocate.c
	../../Middlewares/ST/threadx/common/src/tx_block_pool_cleanup.c
	../../Middlewares/ST/threadx/common/src/tx_block_pool_create.c
	../../Middlewares/ST/threadx/common/src/tx_block_pool_delete.c
	../../Middlewares/ST/threadx/common/src/tx_block_pool_info_get.c
	../../Middlewares/ST/threadx/common/src/tx_block_pool_initialize.c
	../../Middlewares/ST/threadx/common/src/tx_block_pool_prioritize.c
	../../Middlewares/ST/threadx/common/src/tx_block_release.c
	../../Middlewares/ST/threadx/common/src/tx_byte_allocate.c
	../../Middlewares/ST/threadx/common/src/tx_byte_pool_cleanup.c
	../../Middlewares/ST/threadx/common/src/tx_byte_pool_create.c
	../../Middlewares/ST/threadx/common/src/tx_byte_pool_delete.c
	../../Middlewares/ST/threadx/common/src/tx_byte_pool_info_get.c
	../../Middlewares/ST/threadx/common/src/tx_byte_pool_initialize.c
	../../Middlewares/ST/threadx/common/src/tx_byte_pool_prioritize.c
	../../Middlewares/ST/threadx/common/src/tx_byte_pool_search.c
	../../Middlewares/ST/threadx/common/src/tx_byte_release.c
	../../Middlewares/ST/threadx/common/src/tx_event_flags_cleanup.c
	../../Middlewares/ST/threadx/common/src/tx_event_flags_create.c
	../../Middlewares/ST/threadx/common/src/tx_event_flags_delete.c
	../../Middlewares/ST/threadx/common/src/tx_event_flags_get.c
	../../Middlewares/ST/threadx/common/src/tx_event_flags_info_get.c
	../../Middlewares/ST/threadx/common/src/tx_event_flags_initialize.c
	../../Middlewares/ST/threadx/common/src/tx_event_flags_set.c
	../../Middlewares/ST/threadx/common/src/tx_event_flags_set_notify.c
	../../Middlewares/ST/threadx/common/src/tx_mutex_cleanup.c
	../../Middlewares/ST/threadx/common/src/tx_mutex_create.c
	../../Middlewares/ST/threadx/common/src/tx_mutex_delete.c
	../../Middlewares/ST/threadx/common/src/tx_mutex_get.c
	../../Middlewares/ST/threadx/common/src/tx_mutex_info_get.c
	../../Middlewares/ST/threadx/common/src/tx_mutex_initialize.c
	../../Middlewares/ST/threadx/common/src/tx_mutex_prioritize.c
	../../Middlewares/ST/threadx/common/src/tx_mutex_priority_change.c
	../../Middlewares/ST/threadx/common/src/tx_mutex_put.c
	../../Middlewares/ST/threadx/common/src/tx_queue_cleanup.c
	../../Middlewares/ST/threadx/common/src/tx_queue_create.c
	../../Middlewares/ST/threadx/common/src/tx_queue_delete.c
	../../Middlewares/ST/threadx/common/src/tx_queue_flush.c
	../../Middlewares/ST/threadx/common/src/tx_queue_front_send.c
	../../Middlewares/ST/threadx/common/src/tx_queue_info_get.c
	../../Middlewares/ST/threadx/common/src/tx_queue_initialize.c
	../../Middlewares/ST/threadx/common/src/tx_queue_prioritize.c
	../../Middlewares/ST/threadx/common/src/tx_queue_receive.c
	../../Middlewares/ST/threadx/common/src/tx_queue_send.c
	../../Middlewares/ST/threadx/common/src/tx_queue_send_notify.c
	../../Middlewares/ST/threadx/common/src/tx_semaphore_ceiling_put.c
	../../Middlewares/ST/threadx/common/src/tx_semaphore_cleanup.c
	../../Middlewares/ST/threadx/common/src/tx_semaphore_create.c
	../../Middlewares/ST/threadx/common/src/tx_semaphore_delete.c
	../../Middlewares/ST/threadx/common/src/tx_semaphore_get.c
	../../Middlewares/ST/threadx/common/src/tx_semaphore_info_get.c
	../../Middlewares/ST/threadx/common/src/tx_semaphore_initialize.c
	../../Middlewares/ST/threadx/common/src/tx_semaphore_prioritize.c
	../../Middlewares/ST/threadx/common/src/tx_semaphore_put.c
	../../Middlewares/ST/threadx/common/src/tx_semaphore_put_notify.c
	../../Middlewares/ST/threadx/common/src/tx_thread_create.c
	../../Middlewares/ST/threadx/common/src/tx_thread_delete.c
	../../Middlewares/ST/threadx/common/src/tx_thread_entry_exit_notify.c
	../../Middlewares/ST/threadx/common/src/tx_thread_identify.c
	../../Middlewares/ST/threadx/common/src/tx_thread_info_get.c
	../../Middlewares/ST/threadx/common/src/tx_thread_initialize.c
	../../Middlewares/ST/threadx/common/src/tx_thread_preemption_change.c
	../../Middlewares/ST/threadx/common/src/tx_thread_priority_change.c
	../../Middlewares/ST/threadx/common/src/tx_thread_relinquish.c
	../../Middlewares/ST/threadx/common/src/tx_thread_reset.c
	../../Middlewares/ST/threadx/common/src/tx_thread_resume.c
	../../Middlewares/ST/threadx/common/src/tx_thread_shell_entry.c
	../../Middlewares/ST/threadx/common/src/tx_thread_sleep.c
	../../Middlewares/ST/threadx/common/src/tx_thread_stack_analyze.c
	../../Middlewares/ST/threadx/common/src/tx_thread_suspend.c
	../../Middlewares/ST/threadx/common/src/tx_thread_system_preempt_check.c
	../../Middlewares/ST/threadx/common/src/tx_thread_system_suspend.c
	../../Middlewares/ST/threadx/common/src/tx_thread_terminate.c
	../../Middlewares/ST/threadx/common/src/tx_thread_time_slice.c
	../../Middlewares/ST/threadx/common/src/tx_thread_time_slice_change.c
	../../Middlewares/ST/threadx/common/src/tx_thread_timeout.c
	../../Middlewares/ST/threadx/common/src/tx_thread_wait_abort.c
	../../Middlewares/ST/threadx/common/src/tx_time_get.c
	../../Middlewares/ST/threadx/common/src/tx_time_set.c
	../../Middlewares/ST/threadx/common/src/txe_block_allocate.c
	../../Middlewares/ST/threadx/common/src/txe_block_pool_create.c
	../../Middlewares/ST/threadx/common/src/txe_block_pool_delete.c
	../../Middlewares/ST/threadx/common/src/txe_block_pool_info_get.c
	../../Middlewares/ST/threadx/common/src/txe_block_pool_prioritize.c
	../../Middlewares/ST/threadx/common/src/txe_block_release.c
	../../Middlewares/ST/threadx/common/src/txe_byte_allocate.c
	../../Middlewares/ST/threadx/common/src/txe_byte_pool_create.c
	../../Middlewares/ST/threadx/common/src/txe_byte_pool_delete.c
	../../Middlewares/ST/threadx/common/src/txe_byte_pool_info_get.c
	../../Middlewares/ST/threadx/common/src/txe_byte_pool_prioritize.c
	../../Middlewares/ST/threadx/common/src/txe_byte_release.c
	../../Middlewares/ST/threadx/common/src/txe_event_flags_create.c
	../../Middlewares/ST/threadx/common/src/txe_event_flags_delete.c
	../../Middlewares/ST/threadx/common/src/txe_event_flags_get.c
	../../Middlewares/ST/threadx/common/src/txe_event_flags_info_get.c
	../../Middlewares/ST/threadx/common/src/txe_event_flags_set.c
	../../Middlewares/ST/threadx/common/src/txe_event_flags_set_notify.c
	../../Middlewares/ST/threadx/common/src/txe_mutex_create.c
	../../Middlewares/ST/threadx/common/src/txe_mutex_delete.c
	../../Middlewares/ST/threadx/common/src/txe_mutex_get.c
	../../Middlewares/ST/threadx/common/src/txe_mutex_info_get.c
	../../Middlewares/ST/threadx/common/src/txe_mutex_prioritize.c
	../../Middlewares/ST/threadx/common/src/txe_mutex_put.c
	../../Middlewares/ST/threadx/common/src/txe_queue_create.c
	../../Middlewares/ST/threadx/common/src/txe_queue_delete.c
	../../Middlewares/ST/threadx/common/src/txe_queue_flush.c
	../../Middlewares/ST/threadx/common/src/txe_queue_front_send.c
	../../Middlewares/ST/threadx/common/src/txe_queue_info_get.c
	../../Middlewares/ST/threadx/common/src/txe_queue_prioritize.c
	../../Middlewares/ST/threadx/common/src/txe_queue_receive.c
	../../Middlewares/ST/threadx/common/src/txe_queue_send.c
	../../Middlewares/ST/threadx/common/src/txe_queue_send_notify.c
	../../Middlewares/ST/threadx/common/src/txe_semaphore_ceiling_put.c
	../../Middlewares/ST/threadx/common/src/txe_semaphore_create.c
	../../Middlewares/ST/threadx/common/src/txe_semaphore_delete.c
	../../Middlewares/ST/threadx/common/src/txe_semaphore_get.c
	../../Middlewares/ST/threadx/common/src/txe_semaphore_info_get.c
	../../Middlewares/ST/threadx/common/src/txe_semaphore_prioritize.c
	../../Middlewares/ST/threadx/common/src/txe_semaphore_put.c
	../../Middlewares/ST/threadx/common/src/txe_semaphore_put_notify.c
	../../Middlewares/ST/threadx/common/src/txe_thread_create.c
	../../Middlewares/ST/threadx/common/src/txe_thread_delete.c
	../../Middlewares/ST/threadx/common/src/txe_thread_entry_exit_notify.c
	../../Middlewares/ST/threadx/common/src/txe_thread_info_get.c
	../../Middlewares/ST/threadx/common/src/txe_thread_preemption_change.c
	../../Middlewares/ST/threadx/common/src/txe_thread_priority_change.c
	../../Middlewares/ST/threadx/common/src/txe_thread_relinquish.c
	../../Middlewares/ST/threadx/common/src/txe_thread_reset.c
	../../Middlewares/ST/threadx/common/src/txe_thread_resume.c
	../../Middlewares/ST/threadx/common/src/txe_thread_suspend.c
	../../Middlewares/ST/threadx/common/src/txe_thread_terminate.c
	../../Middlewares/ST/threadx/common/src/txe_thread_time_slice_change.c
	../../Middlewares/ST/threadx/common/src/txe_thread_wait_abort.c
	../../Middlewares/ST/threadx/common/src/tx_timer_activate.c
	../../Middlewares/ST/threadx/common/src/tx_timer_change.c
	../../Middlewares/ST/threadx/common/src/tx_timer_create.c
	../../Middlewares/ST/threadx/common/src/tx_timer_deactivate.c
	../../Middlewares/ST/threadx/common/src/tx_timer_delete.c
	../../Middlewares/ST/threadx/common/src/tx_timer_expiration_process.c
	../../Middlewares/ST/threadx/common/src/tx_timer_info_get.c
	../../Middlewares/ST/threadx/common/src/tx_timer_initialize.c
	../../Middlewares/ST/threadx/common/src/tx_timer_system_activate.c
	../../Middlewares/ST/threadx/common/src/tx_timer_system_deactivate.c
	../../Middlewares/ST/threadx/common/src/tx_timer_thread_entry.c
	../../Middlewares/ST/threadx/common/src/txe_timer_create.c
	../../Middlewares/ST/threadx/common/src/txe_timer_activate.c
	../../Middlewares/ST/threadx/common/src/txe_timer_change.c
	../../Middlewares/ST/threadx/common/src/txe_timer_deactivate.c
	../../Middlewares/ST/threadx/common/src/txe_timer_delete.c
	../../Middlewares/ST/threadx/common/src/txe_timer_info_get.c
	../../Utilities/trace/adv_trace/stm32_adv_trace.c
	../../Utilities/misc/stm32_mem.c
	../../Utilities/misc/stm32_systime.c
	../../Utilities/misc/stm32_tiny_sscanf.c
	../../Utilities/misc/stm32_tiny_vsnprintf.c
	../../Utilities/tim_serv/stm32_timer.c
	../../Utilities/lpm/tiny_lpm/stm32_lpm.c
)

target_link_directories(stm32cubemx INTERFACE
    ../../Middlewares/ST/STM32_WPAN/link_layer/ll_cmd_lib/lib
    ../../Middlewares/ST/STM32_WPAN/ble/stack/lib
)

target_link_libraries(stm32cubemx INTERFACE
	:LinkLayer_BLE_Full_lib.a
	:stm32wba_ble_stack_full.a
)

# Validate that STM32CubeMX code is compatible with C standard
if(CMAKE_C_STANDARD LESS 11)
    message(ERROR "Generated code requires C11 or higher")
endif()


